# wb-alfa-seller

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: .env.dist  manage.py
src/parsers/: apps.py  models.py  parser.py
src/parsers/migrations/: 0001_initial.py
src/products/: admin.py  models.py  parsers.py  tasks.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
src/products/templates/products/: index.html  upload.html
src/project_settings/: celery.py  settings.py  urls.py
