[tool.poetry]
name = "wb-alfa-seller"
version = "0.1.0"
description = ""
authors = ["Yuri <yuri-sh@tut.by>"]
readme = "README.md"
packages = [{include = "wb_alfa_seller"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
python-dotenv = "^1.0.0"
black = "^23.7.0"
celery = "^5.3.3"
redis = "^5.0.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
